--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mobx": "^6.13.5",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-gallery-carousel": "^0.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-gallery-carousel": "^0.2.6",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "eslint-plugin-storybook": "^0.11.1",
