--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "framer-motion": "^11.14.3",
     "mobx": "^6.13.5",
     "next": "15.0.4",
     "react": "^19.0.0",
