--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.5.1",
     "mobx": "^6.13.5",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-gallery-carousel": "^0.4.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
