--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,13 @@
 server {
-  listen 80 default_server;
+  listen 80;
+  listen [::]:80;
 
-  server_name _;
+  server_name robotics-bmstu.ru;
 
   server_tokens off;
 
   location / {
+    try_files $uri $uri/ =404;
     proxy_pass http://client:3000;
   }
 }
