--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,8 @@ server {
   server_tokens off;
 
   location / {
-    try_files $uri $uri/ =404;
-    proxy_pass http://client:3000;
+    proxy_set_header   X-Forwarded-For $remote_addr;
+    proxy_set_header   Host $http_host;
+    proxy_pass         http://client:3000;
   }
 }
