--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,9 @@ server {
   location / {
     proxy_set_header   X-Forwarded-For $remote_addr;
     proxy_set_header   Host $http_host;
+    proxy_read_timeout 300s;
+    proxy_connect_timeout 75s;
+    proxy_max_temp_file_size 4096m;
     proxy_pass         http://client:3000;
   }
 }
