--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
+    "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "framer-motion": "^11.14.3",
     "mobx": "^6.13.5",
+    "mongoose": "^8.9.3",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
