--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "ajv": "^8.17.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.2.1",
     "framer-motion": "^11.14.3",
+    "jsonwebtoken": "^9.0.2",
     "mobx": "^6.13.5",
     "mongoose": "^8.9.3",
     "next": "15.0.4",
@@ -34,6 +38,8 @@
     "@storybook/nextjs": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@storybook/test": "^8.4.7",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
