--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -20,17 +24,28 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@/style/*": ["./src/app/styles/*"],
-      "@/components/*": ["./src/app/components/*"],
-      "@/assets/*": ["./src/app/assets/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@/style/*": [
+        "./src/app/styles/*"
+      ],
+      "@/components/*": [
+        "./src/app/components/*"
+      ],
+      "@/assets/*": [
+        "./src/app/assets/*"
+      ]
     }
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "next-env.d.ts",
+    "build/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
