--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,6 @@ services:
   client:
     build:
       context: .
-
-  nginx:
-    image: nginx:alpine
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    restart: unless-stopped
     ports:
-      - "80:80"
+      - "80:3000"
